0029376: Coding Rules, TColStd_PackedMapOfInteger - declare Iterator as nested class of map collection